--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%-title %></title>
+  <title><%-title%></title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
