--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,11 +7,10 @@
   <title><%-title%></title>
   <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
     <%- body %>
-  </div>
 </body>
 </html>
 
